--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -36,19 +36,20 @@
 </nav>
 
 <div class="container-fluid">
-    {% if grade > 80 %}
+    {% if grade > 0.8%}
     <div class="alert alert-success">
-       <!--HINT Display passed info -->
+       <h3>Passed</h3>
     </div>
         {% else %}
         <div class="alert alert-danger">
-            <!--HINT Display failed info -->
+           <h3>Failed</h3>
         </div>
-        <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
+        <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course_id %}">Re-test</a>
         {% endif %}
         <div class="card-columns-vertical mt-1">
         <h5 class="">Exam results</h5>
-            <!--HINT Display exam results-->
+            <h3>Total Marks - {{total}}</h3>
+            <h3>Score - {{score}}</h3>
         </div>
     </div>
 </body>
